# Stavalfi_Cpp_Ex2

./: .gitignore  CMakeLists.txt  README.md  init.txt  main.cpp  player.txt
include/: ApplySoldierStrategies.h  Armor.h  AttackingEnemyStrategy.cpp  AttackingEnemyStrategy.h  AttackingStrategy.h  ChoosingArmorStrategy.h  ChoosingWeaponStrategy.h  CollectableItem.h  CollectingItemStrategy.h  ComputerMovingSoldierStrategy.h  ComputerPlayer.h  ConfigurationReader.h  ConsoleInputInterface.h  ConsoleReporter.h  CurrentGameState.h  DefaultAttackingStrategy.h  DefaultChoosingArmorStrategy.h  DefaultChoosingWeaponStrategy.h  DefaultCollectingItemStrategy.h  DefaultHealingStrategy.h  FileConfigurationReader.cpp  FileConfigurationReader.h  FileReporter.h  FindPlayer.h  Game.h  GameController.h  GameInitializer.cpp  GameInitializer.h  GameState.h  Healer.h  HealingStrategy.cpp  HealingStrategy.h  HeavyWeapon.h  HumanMovingSoldierStrategy.h  HumanPlayer.h  InputInterface.h  Item.h  ItemFactory.h  LightWeapon.h  Map.h  (+31 more)
src/: ApplySoldierStrategies.cpp  Armor.cpp  AttackingStrategy.cpp  ChoosingArmorStrategy.cpp  ChoosingWeaponStrategy.cpp  CollectableItem.cpp  ComputerMovingSoldierStrategy.cpp  ComputerPlayer.cpp  ConfigurationReader.cpp  ConsoleInputInterface.cpp  ConsoleReporter.cpp  CurrentGameState.cpp  DefaultAttackingStrategy.cpp  DefaultChoosingArmorStrategy.cpp  DefaultChoosingWeaponStrategy.cpp  DefaultHealingStrategy.cpp  FileConfigurationReader.cpp  FileReporter.cpp  FindPlayer.cpp  Game.cpp  Game.h  GameController.cpp  GameInitializer.cpp  GameState.cpp  Healer.cpp  HealingStrategy.cpp  HumanMovingSoldierStrategy.cpp  HumanPlayer.cpp  InputInterface.cpp  Item.cpp  ItemFactory.cpp  (+28 more)
(+81 files in other folders)
